--- a/CPP-Game/CPP-Game/CPP-Game.vcxproj.filters
+++ b/CPP-Game/CPP-Game/CPP-Game.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="src\soundmanager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\fileparser.cpp">
+      <Filter>Header Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\game.h">
@@ -60,6 +63,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\fontmanager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\fileparser.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
