--- a/CPP-Game/CPP-Game/CPP-Game.vcxproj.filters
+++ b/CPP-Game/CPP-Game/CPP-Game.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="src\fileparser.cpp">
       <Filter>Header Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\datatypes.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\game.h">
@@ -66,6 +69,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\fileparser.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\datatypes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
