--- a/CPP-Game/CPP-Game/CPP-Game.vcxproj.filters
+++ b/CPP-Game/CPP-Game/CPP-Game.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="src\bullet.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\player.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\game.h">
