--- a/CPP-Game/CPP-Game/CPP-Game.vcxproj
+++ b/CPP-Game/CPP-Game/CPP-Game.vcxproj
@@ -95,8 +95,8 @@
     <LinkIncremental>false</LinkIncremental>
     <OutDir>$(SolutionDir)bin\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)bin\intermediates\$(Platform)\$(Configuration)\</IntDir>
-    <IncludePath>$(SolutionDir)CPP-Game\lib\SDL2_image-2.0.5\include;$(SolutionDir)CPP-Game\lib\SDL2_mixer-2.0.4\include;$(SolutionDir)CPP-Game\lib\SDL2_ttf-2.0.15\include;$(SolutionDir)CPP-Game\lib\SDL2-2.0.12\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)CPP-Game\lib\SDL2-2.0.12\lib\x64;$(SolutionDir)CPP-Game\lib\SDL2_ttf-2.0.15\lib\x64;$(SolutionDir)CPP-Game\lib\SDL2_mixer-2.0.4\lib\x64;$(SolutionDir)CPP-Game\lib\SDL2_image-2.0.5\lib\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)CPP-Game\lib\cryptopp-8.4.0\include\cryptopp;$(SolutionDir)CPP-Game\lib\SDL2_image-2.0.5\include;$(SolutionDir)CPP-Game\lib\SDL2_mixer-2.0.4\include;$(SolutionDir)CPP-Game\lib\SDL2_ttf-2.0.15\include;$(SolutionDir)CPP-Game\lib\SDL2-2.0.12\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)CPP-Game\lib\cryptopp-8.4.0\lib;$(SolutionDir)CPP-Game\lib\SDL2-2.0.12\lib\x64;$(SolutionDir)CPP-Game\lib\SDL2_ttf-2.0.15\lib\x64;$(SolutionDir)CPP-Game\lib\SDL2_mixer-2.0.4\lib\x64;$(SolutionDir)CPP-Game\lib\SDL2_image-2.0.5\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -155,12 +155,13 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_ttf.lib;SDL2_mixer.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_ttf.lib;SDL2_mixer.lib;SDL2_image.lib;cryptopp-static.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\bullet.cpp" />
     <ClCompile Include="src\enemy.cpp" />
+    <ClCompile Include="src\healthbar.cpp" />
     <ClCompile Include="src\player.cpp" />
     <ClCompile Include="src\scene.cpp" />
     <ClCompile Include="src\buttonmanager.cpp" />
@@ -179,8 +180,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\bullet.h" />
+    <ClInclude Include="src\circle.h" />
     <ClInclude Include="src\collision.h" />
     <ClInclude Include="src\enemy.h" />
+    <ClInclude Include="src\healthbar.h" />
     <ClInclude Include="src\objectpooler.h" />
     <ClInclude Include="src\player.h" />
     <ClInclude Include="src\scene.h" />
