--- a/CPP-Game/CPP-Game/CPP-Game.vcxproj.filters
+++ b/CPP-Game/CPP-Game/CPP-Game.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="src\gameover.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\chest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\game.h">
@@ -138,6 +141,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\gameover.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\chest.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\coin.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
