--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -4,7 +4,11 @@ jobs:
   cpplint:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - uses: actions/setup-python@v1
-    - run: pip install cpplint
-    - run: cpplint --recursive .
+    - uses: actions/checkout@v3
+    - uses: actions/setup-python@v4 
+    - name: Setup Linter
+      continue-on-error: true
+      run: |
+        python -m pip install --upgrade pip
+        pip install cpplint
+        cpplint --filter=-whitespace,+whitespace/braces --recursive src
